--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,345 @@
-a {
+.release-notes {
+  background: linear-gradient(0, white, #4b79cf, #4bc5cf);
+  background-size: 300% 300%;
+  font-family: "Segoe UI", Tahoma, sans-serif;
+  max-width: 960px;
+  margin: 25px auto;
+  font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  /* Animate Background Image */
+}
+.release-notes header {
+  position: relative;
+  width: 100%;
+  border: 4px double rgba(255, 255, 255, 0.25);
+  border-width: 4px 0;
+}
+.release-notes svg {
+  width: 50px;
+  height: 50px;
+  fill: "black";
+}
+.release-notes .message {
+  font-size: 125%;
   color: black;
-  text-shadow: 1px 1px 25px yellow;
+  background: #ffce54;
+  box-shadow: 1px 1px 5px #f6bb42;
+  padding: 5px;
+  text-align: center;
+  margin: 15px auto 0;
+  width: 100%;
+  border-radius: 3px;
+}
+.release-notes .message a, .release-notes .message a:hover {
+  color: black;
+}
+.release-notes .pull-left {
+  float: left;
+}
+.release-notes .pull-right {
+  float: right;
+}
+.release-notes .timeline dl {
+  position: relative;
+  top: 0;
+  margin: 0;
+  padding: 0 0 25px;
+}
+.release-notes .timeline dl:before {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 50%;
+  margin-left: -1px;
+  width: 2px;
+  content: '';
+  background-color: #ffce54;
+  z-index: 100;
+}
+.release-notes .timeline dl dt {
+  position: relative;
+  top: 30px;
+  padding: 3px 5px;
+  margin: 0 auto 30px;
+  text-align: center;
+  color: white;
+  width: 120px;
+  z-index: 200;
+  color: black;
+  border-radius: 13px;
+  background: #ffce54;
+  box-shadow: 1px 1px 2px #f6bb42;
+  font-weight: bold;
+}
+.release-notes .timeline dl dd {
+  position: relative;
+  z-index: 200;
+  clear: both;
+  margin-left: 0;
+}
+.release-notes .timeline dl dd .circ {
+  position: absolute;
+  top: 40px;
+  left: 50%;
+  margin-left: -10px;
+  border: 2px solid #ffce54;
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  background-color: #034f84;
+  z-index: 200;
+}
+.release-notes .timeline dl dd .time {
+  position: absolute;
+  top: 31px;
+  left: 50%;
+  padding: 10px 20px;
+  width: 100px;
+  display: inline-block;
+  color: white;
+  font-size: 14px;
+}
+.release-notes .timeline dl dd:first-of-type .events {
+  opacity: 1;
+}
+.release-notes .timeline dl dd .events {
+  position: relative;
+  margin-top: 25px;
+  padding: 10px 10px 0;
+  border-radius: 10px;
+  background-color: white;
+  width: 47%;
+  box-shadow: 0 0 15px #434A54;
+  opacity: 0.5;
+}
+.release-notes .timeline dl dd .events:before {
+  position: absolute;
+  top: 13px;
+  width: 0;
+  height: 0;
+  content: '';
+  border-width: 10px;
+  border-style: solid;
+  margin: 0 -7px;
+}
+.release-notes .timeline dl dd .events .events-object {
+  margin-right: 10px;
+}
+.release-notes .timeline dl dd .events .events-body {
+  overflow: hidden;
+  zoom: 1;
+  font-size: 14px;
+}
+.release-notes .timeline dl dd .events .events-body p {
+  margin: 10px 0;
+}
+.release-notes .timeline dl dd .events .events-body .events-heading {
+  font-size: 18px;
+  color: #4b79cf;
+  padding: 0;
+  margin: 0;
+}
+.release-notes .timeline dl dd.pos-right .time {
+  margin-left: -100px;
+  text-align: right;
+}
+.release-notes .timeline dl dd.pos-right .events {
+  float: right;
+}
+.release-notes .timeline dl dd.pos-right .events:before {
+  left: -12px;
+  border-color: transparent white transparent transparent;
+}
+.release-notes .timeline dl dd.pos-left .time {
+  margin-left: 0;
+  text-align: left;
+}
+.release-notes .timeline dl dd.pos-left .events {
+  float: left;
+}
+.release-notes .timeline dl dd.pos-left .events:before {
+  right: -12px;
+  border-color: transparent transparent transparent white;
+}
+@media screen and (max-width: 767px) {
+  .release-notes .timeline dl:before {
+    left: 60px;
+  }
+  .release-notes .timeline dl dt {
+    margin: 0 0 30px;
+  }
+  .release-notes .timeline dl dd .circ {
+    left: 60px;
+  }
+  .release-notes .timeline dl dd .time {
+    left: 0;
+  }
+  .release-notes .timeline dl dd.pos-left .time {
+    margin-left: 0;
+    padding: 10px 0;
+    text-align: left;
+  }
+  .release-notes .timeline dl dd.pos-left .events {
+    float: right;
+    width: 84%;
+  }
+  .release-notes .timeline dl dd.pos-left .events:before {
+    left: -12px;
+    border-color: transparent white transparent transparent;
+  }
+  .release-notes .timeline dl dd.pos-right .time {
+    margin-left: 0;
+    padding: 10px 0;
+    text-align: left;
+  }
+  .release-notes .timeline dl dd.pos-right .events {
+    float: right;
+    width: 84%;
+  }
+}
+.release-notes .title {
+  font: 400 1em/1.5 "Neuton";
+  color: white;
+  text-align: center;
+  margin: 1em auto;
+  text-transform: uppercase;
+  letter-spacing: 0.25em;
+  padding: 1.5em 0 0 100px;
+}
+.release-notes .title span {
+  font-family: "Oswald", sans-serif;
+  font-size: 4em;
+  letter-spacing: 0;
+  padding: 0.25em 0 0.325em;
+  display: block;
+  margin: 0 auto;
+  text-shadow: 0 0 80px rgba(255, 255, 255, 0.5);
+  background: url("http://i.imgur.com/uFpLbYt.png") repeat-y;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: rgba(255, 255, 255, 0.25);
+  -webkit-animation: aitf 10s linear infinite;
+  -webkit-transform: translate3d(0, 0, 0);
+  -webkit-backface-visibility: hidden;
+}
+.release-notes .title sup {
+  font-size: 50%;
+}
+.release-notes img.thumbnail {
+  width: 45px;
+  vertical-align: middle;
+}
+@-webkit-keyframes aitf {
+  0%, 100% {
+    background-position: 0 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+}
+.box-container {
+  color: #222;
+  display: flex;
+  align-items: center;
+  align-content: center;
+  justify-content: center;
+  text-align: center;
+  position: absolute;
+  left: 50px;
+  top: 50%;
+  margin: -37.5px 0;
+}
+.box-wrapper {
+  perspective: 800px;
+  perspective-origin: 50% 37.5px;
+}
+.box-faces {
+  position: relative;
+  width: 75px;
+  transform-style: preserve-3d;
+}
+.box-face {
+  outline: 1px solid #999;
+  vertical-align: top;
+  position: absolute;
+  width: 75px;
+  height: 75px;
+  opacity: 0.99;
+  color: black;
+  box-shadow: inset 0 0 25px #999;
+  font-weight: bold;
+  font-size: 115%;
+  line-height: 8px;
+}
+.box-face--is-back {
+  transform: translateZ(-37.5px) rotateY(-180deg);
+  background-color: #eee;
+}
+.box-face--is-right {
+  transform: rotateY(-270deg) translateX(37.5px);
+  transform-origin: top right;
+  background-color: #ddd;
+}
+.box-face--is-left {
+  transform: rotateY(270deg) translateX(-37.5px);
+  transform-origin: center left;
+  background-color: #ddd;
+}
+.box-face--is-top {
+  transform: rotateX(-90deg) translateY(-37.5px);
+  transform-origin: top center;
+  background-color: #fafafa;
+}
+.box-face--is-bottom {
+  transform: rotateX(90deg) translateY(37.5px);
+  transform-origin: bottom center;
+  background-color: #bbb;
+}
+.box-face--is-front {
+  transform: translateZ(37.5px);
+  background-color: #eee;
+}
+@keyframes spin {
+  from {
+    transform: rotateY(0);
+  }
+  to {
+    transform: rotateY(-360deg);
+  }
+}
+.box-faces, .shadow {
+  animation: spin 5s infinite linear;
+}
+.shadow-wrapper {
+  perspective: 800px;
+  perspective-origin: 50% 37.5px;
+  /*  -webkit-perspective: 800px;
+-webkit-perspective-origin: 50% 100px;*/
+}
+.shadow {
+  position: relative;
+  width: 75px;
+  transform-style: preserve-3d;
+}
+.shadow div {
+  position: absolute;
+  width: 75px;
+  height: 75px;
+  top: 0;
+  opacity: 0.98;
+  box-shadow: 0 0 37.5px #000;
+  transform: rotateX(90deg) translateY(37.5px);
+  transform-origin: bottom center;
+}
+*, :after, :before {
+  box-sizing: border-box;
+}
+.message-badge {
+  border-radius: 3px;
+  padding: 0 10px;
+  color: black;
+  font-weight: bold;
+}
+.clearfix:after, .clearfix:before {
+  display: table;
+  content: " ";
+  clear: both;
 }
